--- a/style.css
+++ b/style.css
@@ -70,3 +70,32 @@ main {
   border-radius: 5px;
   padding: 1rem;
 }
+
+.main-navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 3rem;
+}
+
+.main-navbar ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.main-li a {
+  text-decoration: none;
+  font-size: 1.2rem;
+  white-space: nowrap;
+}
+
+.main-li {
+  margin: 0 1.5rem;
+}
+
+.main-logo {
+  width: 100%;
+  height: 100%;
+}
