--- a/style.css
+++ b/style.css
@@ -1,133 +1,161 @@
 * {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 4px 3rem;
-  background-color: rgb(208, 133, 27);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4px 3rem;
+    background-color: rgb(208, 133, 27);
 }
 
 .logo img {
-  width: 140%;
-  height: 140%;
-  border-radius: 50%;
+    width: 140%;
+    height: 140%;
+    border-radius: 50%;
 }
 
 .navbar {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .navbar nav ul {
-  display: flex;
-  list-style-type: none;
+    display: flex;
+    list-style-type: none;
 }
 
 .navbar nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 10px;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px;
 }
 
 .logo-name {
-  font-size: 20px;
-  font-weight: bold;
-  color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
 }
 
 .navbar nav {
-  margin-right: 40px;
+    margin-right: 40px;
 }
 
 body {
-  background-color: #edf2f7;
+    background-color: #edf2f7;
 }
 
 .main {
-  display: flex;
-  margin: 3rem;
+    display: flex;
+    margin: 3rem;
 }
 
 aside {
-  width: 25%;
-  margin-right: 25px;
+    width: 25%;
+    margin-right: 25px;
 }
 
 main {
-  width: 75%;
+    width: 75%;
 }
 
 aside,
 main {
-  background: #fff;
-  height: 600px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  padding: 1rem;
+    background: #fff;
+    height: 600px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 1rem;
 }
 
 .main-navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 3rem;
 }
 
 .main-navbar ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
 }
 
 .main-li a {
-  text-decoration: none;
-  font-size: 1.2rem;
-  color: rgb(94, 5, 189);
-  white-space: nowrap;
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: rgb(94, 5, 189);
+    white-space: nowrap;
 }
 
 .main-li {
-  margin: 0 1.5rem;
+    margin: 0 1.5rem;
 }
 
 .main-logo {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .aside-navbar {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .aside-logo {
-  margin-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 
 .aside-ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    list-style: none;
 }
 
 .aside-ul li {
-  margin: 0.4rem 0;
+    margin: 0.4rem 0;
 }
 
 .aside-ul li a {
-  text-decoration: none;
-  font-size: 1.3rem;
-  color: rgb(94, 5, 189);
+    text-decoration: none;
+    font-size: 1.3rem;
+    color: rgb(94, 5, 189);
+}
+
+.cards {
+    display: grid;
+    /* grid-template-columns: repeat(4, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+    padding: 30px 0;
+    grid-template-rows: auto;
+    width: calc(100% - 6rem);
+    margin: 0 auto;
+}
+
+.card {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-image {
+    width: 100%;
+    height: 250px;
+    display: block;
+}
+
+.card-content {
+    line-height: 1.5rem;
+    font-size: 0.9rem;
+    padding: 15px;
+    background-color: #fafafa;
 }
