--- a/style.css
+++ b/style.css
@@ -134,8 +134,8 @@ main {
 
 .cards {
     display: grid;
-    /* grid-template-columns: repeat(4, 1fr); */
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
+    /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
     gap: 30px;
     padding: 30px 0;
     grid-template-rows: auto;
@@ -158,4 +158,74 @@ main {
     font-size: 0.9rem;
     padding: 15px;
     background-color: #fafafa;
+}
+
+.hamburger-menu {
+    display: none;
+}
+
+.hamburger-menu svg {
+    font-size: 1rem;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    margin: 5px 0;
+}
+
+@media (max-width: 768px) {
+    .hamburger-menu {
+        display: block;
+    }
+    .navbar {
+        display: none;
+    }
+    .main-navbar,
+    .aside-navbar {
+        flex-direction: column;
+    }
+    .main-navbar {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+    }
+    .main-logo {
+        width: 128px;
+        height: 63px;
+    }
+    .main-navbar ul {
+        flex-direction: column;
+    }
+    .header {
+        padding: 0 1rem;
+    }
+    .main {
+        flex-direction: column-reverse;
+        margin: 1rem;
+    }
+    aside {
+        width: calc(100% - 2rem);
+        height: 300px;
+    }
+    main {
+        margin-bottom: 20px;
+        width: calc(100% - 2rem);
+        height: 400px;
+    }
+    .cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+    .cards {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 480px) {
+    .cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
